[gd_scene load_steps=2 format=3 uid="uid://c7t61bxer5uf1"]

[ext_resource type="Script" path="res://interactable.gd" id="1_nibmu"]

[node name="Interactable" type="StaticBody2D"]
input_pickable = true
script = ExtResource("1_nibmu")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
